--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,10 @@
+<script>
+  window.location = "BRT"
+</script>
+<DOCTYPE html>
 
+<html>
+  <body>
+    <p style = type:button></p>
+  </body>
+</html
