--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,11 @@
-<script>
+#<script>
   window.location = "BRT"
 </script>
-<DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
-  <body>
-    <p style = type:button></p>
-  </body>
-</html
+<head>
+  <title>Scratch Gamehub</title>
+</head>
+<body style="background-color: #212121;">
+   <h1 style="color:#0000FF";><b>Scratch Games</b></h1>
