--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,9 @@
 
 <html>
 <head>
-  <title>Scratch Gamehub</title>
+  <title>Cool Gamehub</title>
 </head>
 <body style="background-color: #212121;">
-   <h1 style="color:#0000FF";><b>Scratch Games</b></h1>
+   <h1 style="color:#0000FF";><b>Geometry Dash</b></h1>
 </body>
 </html>
