--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,6 @@
 </head>
 <body style="background-color: #212121;">
    <h1 style="color:#0000FF";><b>Geometry Dash</b></h1>
+  <button style = text-size:30; onclick="window.location = 'games/escape.html'">Escape</button>
 </body>
 </html>
