--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>Cool Gamehub</title>
+  <title>Geometry Dash Gamehub</title>
 </head>
 <body style="background-color: #212121;">
    <h1 style="color:#0000FF";><b>Geometry Dash</b></h1>
